NetBSD Problem Report #41042

From reinoud@13thmonkey.org  Thu Mar 19 13:52:00 2009
Return-Path: <reinoud@13thmonkey.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id EF8FA63BA0A
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 19 Mar 2009 13:51:59 +0000 (UTC)
Message-Id: <20090319135200.68627647A@aardappel.13thmonkey.org>
Date: Thu, 19 Mar 2009 14:52:00 +0100 (CET)
From: reinoud@NetBSD.org
Reply-To: reinoud@NetBSD.org
To: gnats-bugs@gnats.NetBSD.org
Subject: native httpd redirection fails
X-Send-Pr-Version: 3.95

>Number:         41042
>Category:       bin
>Synopsis:       native httpd redirection fails
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Mar 19 13:55:00 +0000 2009
>Closed-Date:    Thu Mar 26 18:29:57 +0000 2009
>Last-Modified:  Thu Mar 26 18:29:57 +0000 2009
>Originator:     Reinoud Zandijk
>Release:        NetBSD 5.99.7
>Organization:
NetBSD.org

>Environment:


System: NetBSD aardappel.13thmonkey.org 5.99.7 NetBSD 5.99.7 (GENERIC) #13: Fri Feb 27 13:14:16 CET 2009 root@heethoofdje.13thmonkey.org:/usr/sources/cvs.netbsd.org/src/sys/arch/i386/compile/GENERIC i386
Architecture: i386
Machine: i386

httpd version:
-r-xr-xr-x  1 root  wheel  49739 Feb 26 12:51 /usr/libexec/httpd*

>Description:
When requesting a directory without index.html in the following form:
	http://website.org/directory/
it succeeds but
	http://website.org/directory
fails with httpd segfaulting with signal 11!

its incarnation in inetd.conf is:
www             stream  tcp     nowait:600      www:www /usr/libexec/httpd
httpd -H -X -u -M jad text/vnd.sun.j2me.app-descriptor - - -M jnlp
application/x-java-jnlp-file - - -M jar application/java-archive - -
/home/httpd/

Note that it also fails when issued from the command line.


>How-To-Repeat:
Configure the native httpd daemon on inetd.conf or start it from the command
line and see it segfaulting in the above example.


>Fix:
Looking in a dumped core it turns out to be in the redirect code.
For a workaround, make sure your website allways uses the trailing slash when
refering to directories.



>Release-Note:

>Audit-Trail:
From: Reinoud Zandijk <reinoud@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41042 CVS commit: src/libexec/httpd
Date: Mon, 23 Mar 2009 12:49:29 +0000

 Module Name:	src
 Committed By:	reinoud
 Date:		Mon Mar 23 12:49:29 UTC 2009

 Modified Files:
 	src/libexec/httpd: bozohttpd.c

 Log Message:
 Fix redirection core dump as reported in PR#41042.


 To generate a diff of this commit:
 cvs rdiff -u -r1.10 -r1.11 src/libexec/httpd/bozohttpd.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: reinoud@NetBSD.org
State-Changed-When: Mon, 23 Mar 2009 12:52:43 +0000
State-Changed-Why:
PR fixed by version 1.11 of bozohttpd


State-Changed-From-To: closed->pending-pullups
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Tue, 24 Mar 2009 20:25:20 +0900
State-Changed-Why:
ticket #604


From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41042 CVS commit: [netbsd-5] src/libexec/httpd
Date: Thu, 26 Mar 2009 17:19:45 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Thu Mar 26 17:19:45 UTC 2009

 Modified Files:
 	src/libexec/httpd [netbsd-5]: bozohttpd.c

 Log Message:
 Pull up following revision(s) (requested by reinoud in ticket #604):
 	libexec/httpd/bozohttpd.c: revision 1.11
 Fix redirection core dump as reported in PR#41042.


 To generate a diff of this commit:
 cvs rdiff -u -r1.7.8.2 -r1.7.8.3 src/libexec/httpd/bozohttpd.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Thu, 26 Mar 2009 18:29:57 +0000
State-Changed-Why:
pullup complete


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.51 2026/08/10 02:28:17 riastradh Exp $
$NetBSD: gnats_config.sh,v 1.10 2026/05/13 22:00:09 riastradh Exp $
Copyright © 1994-2026 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.