Fix redirection core dump as reported in PR#41042.